# egeengine

./: .gitignore  CMakeLists.txt
cmake/modules/: Findglfw3.cmake
src/: CMakeLists.txt
src/EGE/: CMakeLists.txt  engine.cpp  engine.hpp  game.cpp  game.hpp
src/EGE/Platform/: CMakeLists.txt  platform.cpp  platform.hpp
src/EGE/Platform/linux/: CMakeLists.txt  linuxplatform.cpp  linuxplatform.hpp
src/EGE/Platform/windows/: CMakeLists.txt  windowsplatform.cpp  windowsplatform.hpp
src/EGE/Utils/: CMakeLists.txt  consts.hpp  logger.hpp  types.hpp
src/EGE/Vulkan/: CMakeLists.txt  vulkanextensions.cpp  vulkanextensions.hpp
src/example/: CMakeLists.txt  examplegame.hpp  main.cpp
